assignment1_recognizer/initial/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
                     "'&&'", "'||'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'::'", "'_'", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "'.'", "','", "':'", "';'", "'='", "'\"'", 
                     "'array'", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'void'", "'while'", "'out'", "'continue'", "'of'", 
                     "'inherit'" ]

    symbolicNames = [ "<INVALID>", "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", 
                      "AND", "OR", "EQUAL", "UNEQUAL", "LT", "LTE", "GT", 
                      "GTE", "DCOLON", "UNDERSCORE", "LB", "RB", "LSB", 
                      "RSB", "LCB", "RCB", "DOT", "COMMA", "COLON", "SMCOLON", 
                      "ASSIGN", "DQUOTE", "ARRAY", "AUTO", "BREAK", "BOOLEAN", 
                      "DO", "ELSE", "FALSE", "FLOAT", "FOR", "FUNCTION", 
                      "IF", "INTEGER", "RETURN", "STRING", "TRUE", "VOID", 
                      "WHILE", "OUT", "CONTINUE", "OF", "INHERIT", "ID", 
                      "INT_LIT", "FLOAT_LIT", "STRING_LIT", "BLOCK_COMMENT", 
                      "INLINE_COMMENT", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_declarations = 1
    RULE_declarations2 = 2
    RULE_declaration = 3
    RULE_var_declaration = 4
    RULE_var_dec = 5
    RULE_var_dec_short = 6
    RULE_var_type = 7
    RULE_id_list = 8
    RULE_id_list2 = 9
    RULE_var_dec_full = 10
    RULE_var_type2 = 11
    RULE_param_dec = 12
    RULE_funct_declaration = 13
    RULE_param_list = 14
    RULE_param_list2 = 15
    RULE_inherit_func = 16
    RULE_var_type3 = 17
    RULE_ele_array_list = 18
    RULE_ele_array_list2 = 19
    RULE_void_type = 20
    RULE_auto_type = 21
    RULE_atomic_type = 22
    RULE_array_type_decl = 23
    RULE_array_type_dimension = 24
    RULE_dimension_size_list = 25
    RULE_dimension_size_list2 = 26
    RULE_expr_list = 27
    RULE_expr_list2 = 28
    RULE_expression = 29
    RULE_string_expression = 30
    RULE_relational_expression = 31
    RULE_logical_expression = 32
    RULE_adding_expression = 33
    RULE_multiplying_expression = 34
    RULE_not_expression = 35
    RULE_sign_expression = 36
    RULE_index_expression = 37
    RULE_expr_ele = 38
    RULE_index_operator = 39
    RULE_not_operator = 40
    RULE_sign_operator = 41
    RULE_multiplying_operator = 42
    RULE_adding_operator = 43
    RULE_logical_operator = 44
    RULE_relational_operator = 45
    RULE_function_call = 46
    RULE_argument_list = 47
    RULE_argument_list2 = 48
    RULE_statement = 49
    RULE_assignment_Statement = 50
    RULE_lhs = 51
    RULE_scalar_var = 52
    RULE_if_Statement = 53
    RULE_for_Statement = 54
    RULE_while_Statement = 55
    RULE_do_while_Statement = 56
    RULE_break_Statement = 57
    RULE_continue_Statement = 58
    RULE_return_Statement = 59
    RULE_call_Statement = 60
    RULE_block_Statement = 61
    RULE_block_list = 62
    RULE_block_list2 = 63
    RULE_block_ele = 64
    RULE_int_literal = 65
    RULE_float_literal = 66
    RULE_bool_literal = 67
    RULE_string_literal = 68
    RULE_normal_literal = 69
    RULE_arry_literal = 70
    RULE_full_literal = 71

    ruleNames =  [ "program", "declarations", "declarations2", "declaration", 
                   "var_declaration", "var_dec", "var_dec_short", "var_type", 
                   "id_list", "id_list2", "var_dec_full", "var_type2", "param_dec", 
                   "funct_declaration", "param_list", "param_list2", "inherit_func", 
                   "var_type3", "ele_array_list", "ele_array_list2", "void_type", 
                   "auto_type", "atomic_type", "array_type_decl", "array_type_dimension", 
                   "dimension_size_list", "dimension_size_list2", "expr_list", 
                   "expr_list2", "expression", "string_expression", "relational_expression", 
                   "logical_expression", "adding_expression", "multiplying_expression", 
                   "not_expression", "sign_expression", "index_expression", 
                   "expr_ele", "index_operator", "not_operator", "sign_operator", 
                   "multiplying_operator", "adding_operator", "logical_operator", 
                   "relational_operator", "function_call", "argument_list", 
                   "argument_list2", "statement", "assignment_Statement", 
                   "lhs", "scalar_var", "if_Statement", "for_Statement", 
                   "while_Statement", "do_while_Statement", "break_Statement", 
                   "continue_Statement", "return_Statement", "call_Statement", 
                   "block_Statement", "block_list", "block_list2", "block_ele", 
                   "int_literal", "float_literal", "bool_literal", "string_literal", 
                   "normal_literal", "arry_literal", "full_literal" ]

    EOF = Token.EOF
    ADD=1
    SUB=2
    MUL=3
    DIV=4
    MOD=5
    NOT=6
    AND=7
    OR=8
    EQUAL=9
    UNEQUAL=10
    LT=11
    LTE=12
    GT=13
    GTE=14
    DCOLON=15
    UNDERSCORE=16
    LB=17
    RB=18
    LSB=19
    RSB=20
    LCB=21
    RCB=22
    DOT=23
    COMMA=24
    COLON=25
    SMCOLON=26
    ASSIGN=27
    DQUOTE=28
    ARRAY=29
    AUTO=30
    BREAK=31
    BOOLEAN=32
    DO=33
    ELSE=34
    FALSE=35
    FLOAT=36
    FOR=37
    FUNCTION=38
    IF=39
    INTEGER=40
    RETURN=41
    STRING=42
    TRUE=43
    VOID=44
    WHILE=45
    OUT=46
    CONTINUE=47
    OF=48
    INHERIT=49
    ID=50
    INT_LIT=51
    FLOAT_LIT=52
    STRING_LIT=53
    BLOCK_COMMENT=54
    INLINE_COMMENT=55
    WS=56
    ERROR_CHAR=57
    UNCLOSE_STRING=58
    ILLEGAL_ESCAPE=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarations(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationsContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.declarations()
            self.state = 145
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationContext,0)


        def declarations2(self):
            return self.getTypedRuleContext(MT22Parser.Declarations2Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declarations

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarations" ):
                return visitor.visitDeclarations(self)
            else:
                return visitor.visitChildren(self)




    def declarations(self):

        localctx = MT22Parser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declarations)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.INHERIT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.declaration()
                self.state = 148
                self.declarations2()
                pass
            elif token in [MT22Parser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declarations2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationContext,0)


        def declarations2(self):
            return self.getTypedRuleContext(MT22Parser.Declarations2Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declarations2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarations2" ):
                return visitor.visitDeclarations2(self)
            else:
                return visitor.visitChildren(self)




    def declarations2(self):

        localctx = MT22Parser.Declarations2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declarations2)
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.INHERIT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.declaration()
                self.state = 154
                self.declarations2()
                pass
            elif token in [MT22Parser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declaration(self):
            return self.getTypedRuleContext(MT22Parser.Var_declarationContext,0)


        def funct_declaration(self):
            return self.getTypedRuleContext(MT22Parser.Funct_declarationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MT22Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.var_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.funct_declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_dec(self):
            return self.getTypedRuleContext(MT22Parser.Var_decContext,0)


        def param_dec(self):
            return self.getTypedRuleContext(MT22Parser.Param_decContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declaration" ):
                return visitor.visitVar_declaration(self)
            else:
                return visitor.visitChildren(self)




    def var_declaration(self):

        localctx = MT22Parser.Var_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_declaration)
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.var_dec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.param_dec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_dec_short(self):
            return self.getTypedRuleContext(MT22Parser.Var_dec_shortContext,0)


        def SMCOLON(self):
            return self.getToken(MT22Parser.SMCOLON, 0)

        def var_dec_full(self):
            return self.getTypedRuleContext(MT22Parser.Var_dec_fullContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_dec" ):
                return visitor.visitVar_dec(self)
            else:
                return visitor.visitChildren(self)




    def var_dec(self):

        localctx = MT22Parser.Var_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_dec)
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.var_dec_short()
                self.state = 168
                self.match(MT22Parser.SMCOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.var_dec_full()
                self.state = 171
                self.match(MT22Parser.SMCOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_dec_shortContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(MT22Parser.Id_listContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_dec_short

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_dec_short" ):
                return visitor.visitVar_dec_short(self)
            else:
                return visitor.visitChildren(self)




    def var_dec_short(self):

        localctx = MT22Parser.Var_dec_shortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_dec_short)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.id_list()
            self.state = 176
            self.match(MT22Parser.COLON)
            self.state = 177
            self.var_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def array_type_decl(self):
            return self.getTypedRuleContext(MT22Parser.Array_type_declContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_type" ):
                return visitor.visitVar_type(self)
            else:
                return visitor.visitChildren(self)




    def var_type(self):

        localctx = MT22Parser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_type)
        try:
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.atomic_type()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.array_type_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def id_list2(self):
            return self.getTypedRuleContext(MT22Parser.Id_list2Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_id_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list" ):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):

        localctx = MT22Parser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_id_list)
        try:
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.match(MT22Parser.ID)
                self.state = 184
                self.id_list2()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 185
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_list2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def id_list2(self):
            return self.getTypedRuleContext(MT22Parser.Id_list2Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_id_list2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list2" ):
                return visitor.visitId_list2(self)
            else:
                return visitor.visitChildren(self)




    def id_list2(self):

        localctx = MT22Parser.Id_list2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_id_list2)
        try:
            self.state = 192
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 188
                self.match(MT22Parser.COMMA)
                self.state = 189
                self.match(MT22Parser.ID)
                self.state = 190
                self.id_list2()
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_dec_fullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def var_dec_full(self):
            return self.getTypedRuleContext(MT22Parser.Var_dec_fullContext,0)


        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type2(self):
            return self.getTypedRuleContext(MT22Parser.Var_type2Context,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_var_dec_full

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_dec_full" ):
                return visitor.visitVar_dec_full(self)
            else:
                return visitor.visitChildren(self)




    def var_dec_full(self):

        localctx = MT22Parser.Var_dec_fullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_var_dec_full)
        try:
            self.state = 206
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 194
                self.match(MT22Parser.ID)
                self.state = 195
                self.match(MT22Parser.COMMA)
                self.state = 196
                self.var_dec_full()
                self.state = 197
                self.match(MT22Parser.COMMA)
                self.state = 198
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 200
                self.match(MT22Parser.ID)
                self.state = 201
                self.match(MT22Parser.COLON)
                self.state = 202
                self.var_type2()
                self.state = 203
                self.match(MT22Parser.ASSIGN)
                self.state = 204
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_type2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_var_type2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_type2" ):
                return visitor.visitVar_type2(self)
            else:
                return visitor.visitChildren(self)




    def var_type2(self):

        localctx = MT22Parser.Var_type2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_var_type2)
        try:
            self.state = 210
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.ARRAY, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 208
                self.var_type()
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 209
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type2(self):
            return self.getTypedRuleContext(MT22Parser.Var_type2Context,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_dec" ):
                return visitor.visitParam_dec(self)
            else:
                return visitor.visitChildren(self)




    def param_dec(self):

        localctx = MT22Parser.Param_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_param_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 213
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 212
                self.match(MT22Parser.INHERIT)

